--- a/mt6000.config
+++ b/mt6000.config
@@ -137,6 +137,7 @@ CONFIG_PACKAGE_luci-app-wireguard=y
 # CONFIG_PACKAGE_luci-app-xlnetacc is not set
 CONFIG_PACKAGE_luci-app-sqm=y
 CONFIG_PACKAGE_luci-app-frpc=y
+CONFIG_PACKAGE_luci-app-https-dns-proxy=y
 
 # LuCI主题:
 CONFIG_PACKAGE_luci=y
