add ddns related packages

--- a/mt6000.config
+++ b/mt6000.config
@@ -36,6 +36,10 @@ CONFIG_PACKAGE_luci-proto-ipv6=y
 CONFIG_PACKAGE_tailscale=y
 CONFIG_PACKAGE_iptables-nft=y
 
+# DDNS
+CONFIG_PACKAGE_ca-certificates=y
+CONFIG_PACKAGE_ddns-scripts-cloudflare=y
+
 #cloudflared
 CONFIG_PACKAGE_cloudflared=y
 
