--- a/mt6000.config
+++ b/mt6000.config
@@ -4,12 +4,8 @@ CONFIG_TARGET_mediatek_filogic=y
 CONFIG_TARGET_mediatek_filogic_DEVICE_glinet_gl-mt6000=y
 CONFIG_TARGET_OPTIMIZATION="-O2 -pipe -mcpu=cortex-a53"
 CONFIG_TARGET_OPTIONS=y
-CONFIG_TARGET_ROOTFS_PARTSIZE=104
-CONFIG_PACKAGE_kmod-rtl8192c-common=y
-CONFIG_PACKAGE_kmod-rtl8192cu=y
-CONFIG_PACKAGE_rtl8192cu-firmware=y
-CONFIG_PACKAGE_kmod-rtlwifi=y
-CONFIG_PACKAGE_kmod-rtlwifi-usb=y
+CONFIG_DEVEL=y
+CONFIG_TARGET_ROOTFS_PARTSIZE=1024
 
 # 文件系统镜像等支持:
 # CONFIG_TARGET_ROOTFS_SQUASHFS=y
